--- a/latticeum/crates/vm/Cargo.toml
+++ b/latticeum/crates/vm/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2024"
 [dependencies]
 elf = "0.8.0"
 riscv-isa = "0.3.1"
+test-log = { version = "0.2.18", features = ["trace"] }
 thiserror = "2.0.12"
 tracing = "0.1.41"
-tracing-test = "0.2.5"
