--- a/latticeum/Cargo.toml
+++ b/latticeum/Cargo.toml
@@ -1,3 +1,7 @@
 [workspace]
 resolver = "3"
-members = ["crates/vm"]
+members = [ "crates/configuration",
+	"crates/guest",
+	"crates/vm",
+	"guests/fibonacci"
+]
