--- a/latticeum/crates/vm/Cargo.toml
+++ b/latticeum/crates/vm/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+configuration = { path = "../configuration" }
+
 elf = "0.8.0"
 riscv-isa = "0.3.1"
 test-log = { version = "0.2.18", features = ["trace"] }
