Check relation for add instruction

--- a/latticeum/crates/zkvm/Cargo.toml
+++ b/latticeum/crates/zkvm/Cargo.toml
@@ -16,3 +16,6 @@ stark-rings = { workspace = true }
 stark-rings-poly = { workspace = true }
 stark-rings-linalg = { workspace = true }
 ark-std = { workspace = true }
+
+[features]
+debug = []
