Commit to memory vector

--- a/latticeum/Cargo.toml
+++ b/latticeum/Cargo.toml
@@ -30,5 +30,8 @@ stark-rings-poly = { git = "https://github.com/NethermindEth/stark-rings.git", b
 
 p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git" }
 p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3.git" }
+p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git" }
+p3-field = { git = "https://github.com/Plonky3/Plonky3.git" }
 
 ark-std = "0.5.0"
+rand = { version = "0.9.2" }
