--- a/latticeum/crates/zkvm/Cargo.toml
+++ b/latticeum/crates/zkvm/Cargo.toml
@@ -19,6 +19,9 @@ ark-std = { workspace = true }
 
 p3-poseidon2 = { workspace = true }
 p3-goldilocks = { workspace = true }
+p3-symmetric = { workspace = true }
+p3-field = { workspace = true }
+rand = { workspace = true }
 
 [features]
 debug = []
