--- a/latticeum/crates/zkvm/Cargo.toml
+++ b/latticeum/crates/zkvm/Cargo.toml
@@ -21,6 +21,10 @@ p3-poseidon2 = { workspace = true }
 p3-goldilocks = { workspace = true }
 p3-symmetric = { workspace = true }
 p3-field = { workspace = true }
+p3-keccak = { workspace = true }
+p3-merkle-tree = { workspace = true }
+p3-matrix = { workspace = true }
+
 rand = { workspace = true }
 
 [features]
