--- a/latticeum/crates/zkvm/Cargo.toml
+++ b/latticeum/crates/zkvm/Cargo.toml
@@ -24,6 +24,7 @@ p3-field = { workspace = true }
 p3-keccak = { workspace = true }
 p3-merkle-tree = { workspace = true }
 p3-matrix = { workspace = true }
+p3-commit = { workspace = true }
 
 rand = { workspace = true }
 
