--- a/latticeum/Cargo.toml
+++ b/latticeum/Cargo.toml
@@ -39,3 +39,8 @@ p3-commit = { git = "https://github.com/Plonky3/Plonky3.git" }
 
 ark-std = "0.5.0"
 rand = { version = "0.9.2" }
+
+
+[profile.profiling]
+inherits = "release"
+debug = true
