--- a/latticeum/crates/zkvm/Cargo.toml
+++ b/latticeum/crates/zkvm/Cargo.toml
@@ -9,6 +9,8 @@ vm = { workspace = true }
 
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+test-log = { workspace = true }
+
 num-traits = { workspace = true }
 latticefold = { workspace = true }
 cyclotomic-rings = { workspace = true }
