--- a/latticeum/Cargo.toml
+++ b/latticeum/Cargo.toml
@@ -36,6 +36,7 @@ p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git" }
 p3-keccak = { git = "https://github.com/Plonky3/Plonky3.git" }
 p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git" }
 p3-commit = { git = "https://github.com/Plonky3/Plonky3.git" }
+p3-mds = { git = "https://github.com/Plonky3/Plonky3.git" }
 
 ark-std = "0.5.0"
 rand = { version = "0.9.2" }
