--- a/latticeum/crates/zkvm/Cargo.toml
+++ b/latticeum/crates/zkvm/Cargo.toml
@@ -27,6 +27,7 @@ p3-keccak = { workspace = true }
 p3-merkle-tree = { workspace = true }
 p3-matrix = { workspace = true }
 p3-commit = { workspace = true }
+p3-mds = { workspace = true }
 
 rand = { workspace = true }
 
