--- a/latticeum/Cargo.toml
+++ b/latticeum/Cargo.toml
@@ -37,7 +37,8 @@ p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git" }
 p3-commit = { git = "https://github.com/Plonky3/Plonky3.git" }
 p3-mds = { git = "https://github.com/Plonky3/Plonky3.git" }
 
-ark-std = "0.5.0"
+ark-std = "0.4.0"
+ark-ff = "0.4.2"
 rand = { version = "0.9.2" }
 
 
