--- a/latticeum/crates/zkvm/Cargo.toml
+++ b/latticeum/crates/zkvm/Cargo.toml
@@ -18,6 +18,7 @@ stark-rings = { workspace = true }
 stark-rings-poly = { workspace = true }
 stark-rings-linalg = { workspace = true }
 ark-std = { workspace = true }
+ark-ff = { workspace = true }
 
 p3-poseidon2 = { workspace = true }
 p3-goldilocks = { workspace = true }
