--- a/latticeum/Cargo.toml
+++ b/latticeum/Cargo.toml
@@ -21,6 +21,7 @@ tracing-subscriber = "0.3.18"
 test-log = { version = "0.2.18", features = ["trace"] }
 
 num-traits = "0.2"
+rand = { version = "0.9.2" }
 
 latticefold = { git = "https://github.com/NethermindEth/latticefold.git", branch = "main" }
 cyclotomic-rings = { git = "https://github.com/NethermindEth/latticefold.git", branch = "main" }
@@ -36,11 +37,11 @@ p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git" }
 p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git" }
 p3-commit = { git = "https://github.com/Plonky3/Plonky3.git" }
 p3-mds = { git = "https://github.com/Plonky3/Plonky3.git" }
+p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git" }
 
 ark-std = "0.4.0"
 ark-ff = "0.4.2"
-rand = { version = "0.9.2" }
-
+ark-crypto-primitives = { version = "0.4.0", default-features = false, features = [ "sponge" ] }
 
 [profile.profiling]
 inherits = "release"
