--- a/latticeum/Cargo.toml
+++ b/latticeum/Cargo.toml
@@ -4,9 +4,16 @@ members = [
 	"crates/configuration",
 	"crates/guest",
 	"crates/vm",
+    "crates/cyclotomic-rings",
+    "crates/latticefold",
 	"crates/zkvm",
+
 	"guests/fibonacci",
 ]
+
+[workspace.package]
+edition = "2024"
+license = "MIT"
 
 [workspace.dependencies]
 vm = { path = "./crates/vm" }
@@ -21,13 +28,22 @@ tracing-subscriber = "0.3.18"
 test-log = { version = "0.2.18", features = ["trace"] }
 
 num-traits = "0.2"
-rand = { version = "0.9.2" }
+rand = { version = "0.8.5", default-features = false }
 
-latticefold = { git = "https://github.com/NethermindEth/latticefold.git", branch = "main" }
-cyclotomic-rings = { git = "https://github.com/NethermindEth/latticefold.git", branch = "main" }
+latticefold = { path = "crates/latticefold", default-features = false }
+cyclotomic-rings = { path = "crates/cyclotomic-rings", default-features = false }
+
 stark-rings = { git = "https://github.com/NethermindEth/stark-rings.git", branch = "main", default-features = false }
 stark-rings-linalg = { git = "https://github.com/NethermindEth/stark-rings.git", branch = "main", default-features = false }
 stark-rings-poly = { git = "https://github.com/NethermindEth/stark-rings.git", branch = "main", default-features = false }
+
+num-bigint = { version = "0.4.5", default-features = false }
+rayon = "1.10.0"
+criterion = "0.5.1"
+proc-macro2 = "1.0.92"
+quote = "1.0.37"
+serde = { version = "1.0.216", features = ["derive"] }
+toml = "0.8.19"
 
 p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git" }
 p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3.git" }
@@ -39,9 +55,10 @@ p3-commit = { git = "https://github.com/Plonky3/Plonky3.git" }
 p3-mds = { git = "https://github.com/Plonky3/Plonky3.git" }
 p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git" }
 
-ark-std = "0.4.0"
+ark-std = { version = "0.4.0", default-features = false }
 ark-ff = "0.4.2"
 ark-crypto-primitives = { version = "0.4.0", default-features = false, features = [ "sponge" ] }
+ark-serialize = { version = "0.4.2", features = ["derive"] }
 
 [profile.profiling]
 inherits = "release"
